# Taller_TP1

./: CMakeLists.txt  aux.txt  client.c  client.h  client_aux.c  client_aux.h  client_conectarAlSocket.c  client_conectarAlSocket.h  client_connectToSocket.c  client_connectToSocket.h  client_main.c  client_main.h  client_transmitterSocket.c  client_transmitterSocket.h  common_aux.c  common_aux.h  common_aux_cipher.c  common_aux_cipher.h  common_aux_socket.c  common_aux_socket.h  common_cipher.c  common_cipher.h  common_cipher_aux.c  common_cipher_aux.h  common_decoding.c  common_decoding.h  common_encoderCesar.c  common_encoderCesar.h  common_encoderRC4.c  common_encoderRC4.h  common_encoderVigenere.c  common_encoderVigenere.h  common_parser.c  common_parser.h  common_parsing.c  common_parsing.h  common_socket.c  common_socket.h  common_socket_aux.c  common_socket_aux.h  (+14 more)
salidas/01-cesar-lorem-ipsum/: client_1_to_server.dump
salidas/03-cesar-short/: client_1_to_server.dump
salidas/04-rc4-lorem-ipsum/: client_1_to_server.dump
salidas/05-rc4-panqueso/: client_1_to_server.dump
salidas/06-rc4-short/: client_1_to_server.dump
salidas/07-vigenere-lorem-ipsum/: client_1_to_server.dump
salidas/08-vigenere-panqueso/: client_1_to_server.dump
salidas/09-vigenere-short/: client_1_to_server.dump
